<resources>
    <string name="app_name">InVentas</string>
    <string name="ventas_del_dia">Ventas del día</string>
    <string name="todo">TODO</string>
    <string name="articulo">Artículo</string>
    <string name="historico">Histórico</string>
    <string name="efectivo">Efectivo</string>
    <string name="punto">Punto</string>
    <string name="mixto">Mixto</string>
    <string name="transferencia">Transferencia</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="tus_precios_en_bs">Sus precios en Bs.S. se actualizarán automáticamente.</string>
    <string name="administrador_de_ventas">administrador de ventas</string>
    <string name="administrador_de_inventario">administrador de inventario</string>
    <string name="aqui_se_muestra_el_historial_de_venta_y_en_el_boton_se_a_ade_una_venta_nueva">aqui se muestra el historial de venta y en el boton se añade una venta nueva</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aqui_se_a_aden_productos_al_carrito">aqui se añaden productos al carrito</string>
    <string name="tasas">Tasas</string>
    <string name="tasa">Tasa</string>
    <string name="tasa_del_dia">Tasa del día</string>
    <string name="actualizar">Actualizar</string>Tus estadísticas semanales
    <string name="constular_ventas_del_dia">Consultar ventas del día</string>
    <string name="tus_estadisticas_semanales">Tu estadística semanal</string>
    <string name="ingrese_el_valor_del_dolar">Ingrese el valor del dólar</string>
    <string name="tasa_anterior">Tasa anterior</string>
    <string name="ganancia_total">Ganancia total</string>
    <string name="ingreso_total">Ingreso total</string>
    <string name="unidades_en_su_inventario">Unidades en su inventario</string>
    <string name="el_precio_en_bs_se_actualiza_automaticamente">El precio en Bs.S. se actualiza automáticamente.</string>
    <string name="historial_de_cambios">Historial de cambios</string>
    <string name="historial_de_tasas">Historial de tasas</string>
    <string name="historial_de_ventas">Historial de ventas</string>
    <string name="c_digo">Código</string>
    <string name="precio_bss">Precio Bs.S:</string>
    <string name="equivalente">Equivalente</string>
    <string name="opcional">Opcional</string>
    <string name="descripci_n">   Descripción</string>
    <string name="imagen_que_sube_el_usuario">Imagen que sube el usuario</string>
    <string name="guardar">Guardar</string>
    <string name="costo">"Costo"</string>
    <string name="descripci_n_del_producto">"Descripción del producto"</string>
    <string name="precio">"Precio"</string>
    <string name="precioD">Precio $</string>
    <string name="costoD">Costo $</string>
    <string name="codigo_de_barras">"Código de barras"</string>
    <string name="cantidadstock">cantidadStock</string>
    <string name="costodolares">costoDolares</string>
    <string name="preciodolares">precioDolares</string>
    <string name="precio_en_bss">Precio en BsS</string>
    <string name="_1">1</string>
    <string name="cantidad">Cantidad</string>
    <string name="seleccione">Seleccione</string>
    <string name="agregar_a_carrito">Agregar a carrito</string>
    <string name="unidades_disponibles">Unidades disponibles</string>
    <string name="venta_dolares">venta dolares</string>
    <string name="factura">Factura</string>
    <string name="hora">Hora</string>
    <string name="venta_en_bolivares">venta en bolivares</string>
    <string name="resumen_factura">resumen factura</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="elegir_una_foto">Elegir una foto</string>
    <string name="mas_vendido">Más vendido</string>
    <string name="menos_vendido">Menos vendido</string>
    <string name="dia_con_mas_ventas">Mejor día en ventas.</string>
    <string name="dia_con_menos_ventas">Peor día en ventas.</string>
    <string name="dia_con_mas_ingreso">Mejor día en ingresos.</string>
    <string name="dia_con_menos_ingreso">Peor día en ingresos.</string>
    <string name="ganancias">Ganancias</string>
</resources>