<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.CrearProductoActivity">

    <FrameLayout
        android:id="@+id/barra_azul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <include
            android:id="@+id/menu_crear_producto"
            layout="@layout/view_crear_bar"
            android:theme="@style/Theme.InVentas" />

        <Button
            android:id="@+id/guardar_btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="GUARDAR"
            android:fontFamily="sans-serif"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:onClick="salvarDatos"
            android:visibility="invisible"
            android:backgroundTint="@color/colorSecondary"
            tools:ignore="RtlCompat">

        </Button>

        <Button
            android:id="@+id/editar_btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="EDITAR"
            android:fontFamily="sans-serif"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:onClick="permitirEdicion"
            android:visibility="invisible"
            android:backgroundTint="@color/colorSecondary"
            tools:ignore="RtlCompat">

        </Button>

        <Button
            android:id="@+id/cancelar_btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="CANCELAR"
            android:fontFamily="sans-serif"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="65dp"
            android:onClick="bloquearEdicion"
            android:visibility="invisible"
            android:backgroundTint="@color/colorSecondary"
            tools:ignore="RtlCompat">

        </Button>

        <Button
            android:id="@+id/borrar_btn"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="BORRAR"
            android:fontFamily="sans-serif"
            android:clickable="true"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="65dp"
            android:onClick="eliminarArticulo"
            android:visibility="visible"
            android:backgroundTint="#C60C28"
            tools:ignore="RtlCompat">

        </Button>

        <Button
            android:id="@+id/retroceder_btn"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:clickable="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:onClick="salir"
            android:visibility="visible"
            android:foreground="@drawable/arrow_back_24"
            tools:ignore="RtlCompat">

        </Button>
    </FrameLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fotoproducto_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:clickable="true"
        android:layout_marginRight="32dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:foregroundGravity="right|bottom"
        app:backgroundTint="@color/colorSecondary"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barra_azul"
        app:srcCompat="@drawable/add_a_photo_black_24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/barra_azul"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="55dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/imagen_que_sube_el_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icono_sin_fondo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:padding="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descripcionProdLayout"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descripcionProd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/costoLayout"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/costo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/costo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/precioLayout"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/precio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/codTxtLayout"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_de_barras"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/codTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth_bold"
                        android:text="@string/precio_bss"
                        android:textColor="@color/colorPrimary"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/precioBs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/amaranth_bold"
                            android:hint="99.999.999,999"
                            android:textAlignment="viewEnd"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cantidadLayout"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cantidad"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cantidad"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>